融合detective和rtmp功能

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,13 +1,18 @@
 detectives:
-  - id: 1
-    polygon_coordinates: [(100, 100), (200, 50), (2500, 100), (2150, 200), (2200, 2200)]
+  - id: 31
+    polygon_coordinates:
+      - [100, 100]
+      - [200, 50]
+      - [2500, 100]
+      - [2150, 200]
+      - [2200, 2200]
     rtmp:
-      pull_stream: https://cn-sccd-ct-01-04.bilivideo.com/live-bvc/195674/live_3461572997417576_27045827_1500/index.m3u8
+      pull_stream: rtmp://localhost/live/livestream1
       push_stream: http://localhost:8080/live/livestream.flv
     monitoring_topics:
       - person
       - fire
-  - id: 2
+  - id: 12
     rtmp:
       pull_stream: rtmp://localhost/live/livestream2
       push_stream: http://localhost:8080/live/livestream2.flv
@@ -15,9 +20,15 @@ detectives:
       - person
       - fire
       - smoke
+    polygon_coordinates:
+      - [100, 100]
+      - [200, 50]
+      - [2500, 100]
+      - [2150, 200]
+      - [2200, 2200]
 
 yolo:
-  refresh_time_ms: 40  # YOLO模型的刷新时间，单位为毫秒
+  refresh_time_ms: 1  # YOLO模型的刷新时间，单位为毫秒
   model: yolov5m #模型名
   repo_or_dir: ultralytics/yolov5 #模型路径/库
 
