--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,21 +1,17 @@
 detectives:
   - id: 31
-    polygon_coordinates:
-      - [100, 100]
-      - [200, 50]
-      - [2500, 100]
-      - [2150, 200]
-      - [2200, 2200]
     rtmp:
-      pull_stream: rtmp://localhost/live/livestream1
-      push_stream: http://localhost:8080/live/livestream.flv
+      pull_stream: https://cn-sccd-ct-01-03.bilivideo.com/live-bvc/122327/live_591456_4767120_2500/index.m3u8
+      push_stream: rtmp://localhost/live/livestream123
+      play_url: http://localhost:8080/live/livestream123.flv
     monitoring_topics:
       - person
       - fire
   - id: 12
     rtmp:
       pull_stream: rtmp://localhost/live/livestream2
-      push_stream: http://localhost:8080/live/livestream2.flv
+      push_stream: rtmp://localhost/live/livestream321
+      play_url: http://localhost:8080/live/livestream321.flv
     monitoring_topics:
       - person
       - fire
@@ -26,14 +22,15 @@ detectives:
       - [2500, 100]
       - [2150, 200]
       - [2200, 2200]
-
 yolo:
   refresh_time_ms: 1  # YOLO模型的刷新时间，单位为毫秒
   model: yolov5m #模型名
   repo_or_dir: ultralytics/yolov5 #模型路径/库
+  show_detected_line: True #探测的需要报警的物体才显示框,否则探测到的所有物体都显示框。
 
 pull_rtmp: 
-  long_wait_retry_seconds: 60 #最长rtmp重试时间
+  long_wait_retry_seconds: 10 #最长rtmp重试时间
   short_wait_retry_seconds: 1 #最短rtmp重试时间
-  number_of_retry_short2long: 3 #最短到最长的切换次数
+  number_of_retry_short2long: 300 #最短到最长的切换次数
   daemon: False #拉流是否守护子线程
+  cache_size: 1024 #拉流缓冲区frame存放数量 超过就丢弃
