--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 detectives:
-  - id: 31
+  - id: 3
     rtmp:
       pull_stream: https://cn-sccd-ct-01-03.bilivideo.com/live-bvc/122327/live_591456_4767120_2500/index.m3u8
       push_stream: rtmp://localhost/live/livestream123
@@ -7,9 +7,11 @@ detectives:
     monitoring_topics:
       - person
       - fire
+    polygon_coordinates:
+      - null
   - id: 12
     rtmp:
-      pull_stream: rtmp://localhost/live/livestream2
+      pull_stream: rtmp://localhost/live/livestream299
       push_stream: rtmp://localhost/live/livestream321
       play_url: http://localhost:8080/live/livestream321.flv
     monitoring_topics:
@@ -22,15 +24,19 @@ detectives:
       - [2500, 100]
       - [2150, 200]
       - [2200, 2200]
+
 yolo:
-  refresh_time_ms: 1  # YOLO模型的刷新时间，单位为毫秒
+  refresh_time_ms: 0  # YOLO模型的刷新时间，单位为毫秒
   model: yolov5m #模型名
   repo_or_dir: ultralytics/yolov5 #模型路径/库
   show_detected_line: True #探测的需要报警的物体才显示框,否则探测到的所有物体都显示框。
 
 pull_rtmp: 
-  long_wait_retry_seconds: 10 #最长rtmp重试时间
-  short_wait_retry_seconds: 1 #最短rtmp重试时间
-  number_of_retry_short2long: 300 #最短到最长的切换次数
+  long_wait_retry_seconds: 100 #最长rtmp重试时间
+  short_wait_retry_seconds: 40 #最短rtmp重试时间
+  number_of_retry_short2long: 1 #最短到最长的切换次数
   daemon: False #拉流是否守护子线程
-  cache_size: 1024 #拉流缓冲区frame存放数量 超过就丢弃
+  cache_size: 10240 #拉流缓冲区frame存放数量 超过就丢弃
+
+server:
+  check_config_second: 3 #检查配置间隔时间
