--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 detectives:
   - id: 3
     rtmp:
-      pull_stream: https://cn-sccd-ct-01-03.bilivideo.com/live-bvc/122327/live_591456_4767120_2500/index.m3u8
+      pull_stream: https://cn-jsyz-ct-03-27.bilivideo.com/live-bvc/949839/live_3494368669338503_7711584_1500/index99.m3u8
       push_stream: rtmp://localhost/live/livestream123
       play_url: http://localhost:8080/live/livestream123.flv
     monitoring_topics:
@@ -11,7 +11,7 @@ detectives:
       - null
   - id: 12
     rtmp:
-      pull_stream: rtmp://localhost/live/livestream299
+      pull_stream: rtmp://localhost/live/livestream2
       push_stream: rtmp://localhost/live/livestream321
       play_url: http://localhost:8080/live/livestream321.flv
     monitoring_topics:
@@ -32,9 +32,9 @@ yolo:
   show_detected_line: True #探测的需要报警的物体才显示框,否则探测到的所有物体都显示框。
 
 pull_rtmp: 
-  long_wait_retry_seconds: 100 #最长rtmp重试时间
-  short_wait_retry_seconds: 40 #最短rtmp重试时间
-  number_of_retry_short2long: 1 #最短到最长的切换次数
+  long_wait_retry_seconds: 10 #最长rtmp重试时间
+  short_wait_retry_seconds: 4 #最短rtmp重试时间
+  number_of_retry_short2long: 111 #最短到最长的切换次数
   daemon: False #拉流是否守护子线程
   cache_size: 10240 #拉流缓冲区frame存放数量 超过就丢弃
 
