--- a/video_detective/config/config.yaml
+++ b/video_detective/config/config.yaml
@@ -8,7 +8,11 @@ detectives:
       - person
       - fire
     polygon_coordinates:
-      - null
+      - [100, 100]
+      - [200, 50]
+      - [2500, 100]
+      - [2150, 200]
+      - [2200, 2200]
   - id: 12
     rtmp:
       pull_stream: rtmp://localhost/live/livestream2
@@ -36,10 +40,10 @@ yolo:
 
 pull_rtmp: 
   long_wait_retry_seconds: 10 #最长rtmp重试时间
-  short_wait_retry_seconds: 114 #最短rtmp重试时间
+  short_wait_retry_seconds: 5 #最短rtmp重试时间
   number_of_retry_short2long: 111 #最短到最长的切换次数
   daemon: False #拉流是否守护子线程
-  cache_size: 10240 #拉流缓冲区frame存放数量 超过就丢弃
+  cache_size: 1024 #拉流缓冲区frame存放数量 超过就丢弃
 
 server:
   check_config_second: 3 #检查配置间隔时间
@@ -51,4 +55,6 @@ server:
       - bootstrap_server: kafka1:9092 #Kafka 服务器地址 (设置hosts：宿主机ip对应kafka的入口点 如：172.26.58.113 kafka1)
       - bootstrap_server: kafka2:9093
       - bootstrap_server: kafka3:9094
+  log_path: C:\Users\luoru\Desktop\vd.log
+  log_level: info
       
