--- a/video_detective/config/config.yaml
+++ b/video_detective/config/config.yaml
@@ -1,33 +1,29 @@
 detectives:
   - id: 3
     rtmp:
-      pull_stream: rtsp://admin:123456@192.168.43.72:554/stream1
-      push_stream: rtmp://localhost/live/livestream123
-      play_url: http://localhost:8080/live/livestream123.flv
+      pull_stream: rtmp://localhost/live/livestream/mydevice
+      push_stream: rtmp://localhost/live/livestream/mydevice
+      play_url: http://localhost:8080/live/livestream/mydevice.flv
+      push_raw_stream: rtmp://localhost/live/livestream/mydevice-raw.flv
+      raw_play_url: http://localhost:8080/live/livestream/mydevice-raw.flv
     monitoring_topics:
       - person
       - fire
     polygon_coordinates:
-      - [100, 100]
-      - [200, 50]
-      - [2500, 100]
-      - [2150, 200]
-      - [2200, 2200]
+      - null
   - id: 12
     rtmp:
-      pull_stream: rtmp://localhost/live/livestream2
+      pull_stream: rtsp://admin:123456@192.168.43.72:554/stream2
       push_stream: rtmp://localhost/live/livestream321
       play_url: http://localhost:8080/live/livestream321.flv
+      push_raw_stream: rtmp://localhost/live/livestream321-raw.flv
+      raw_play_url: http://localhost:8080/live/livestream321-raw.flv
     monitoring_topics:
       - person
       - fire
       - smoke
     polygon_coordinates:
-      - [100, 100]
-      - [200, 50]
-      - [2500, 100]
-      - [2150, 200]
-      - [2200, 2200]
+      - null
 
 yolo:
   models: 
@@ -43,7 +39,7 @@ pull_rtmp:
   short_wait_retry_seconds: 5 #最短rtmp重试时间
   number_of_retry_short2long: 111 #最短到最长的切换次数
   daemon: False #拉流是否守护子线程
-  cache_size: 1024 #拉流缓冲区frame存放数量 超过就丢弃
+  cache_size: 1 #拉流缓冲区frame存放数量 超过就丢弃
 
 server:
   check_config_second: 3 #检查配置间隔时间
